# TophatClanBot

./: .dockerignore  .gitignore  ADMIN_RANKS_GUIDE.md  BACKUP_RESTORE_GUIDE.md  COMMANDS_GUIDE.md  CRITICAL_FIX_APPLIED.md  DATABASE_CONSISTENCY_FIXES.md  DATABASE_FIX_GUIDE.md  DATABASE_SECURITY_AUDIT.md  DEPLOY_FIX.md  DISCORD_LOGGING_FIX.md  DISCORD_LOG_CONTROL.md  DOCKER_CICD_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FIX_SUMMARY.md  Makefile  OCI_DEPLOYMENT_GUIDE.md  OCI_NETWORK_REQUIREMENTS.md  ONBOARDING_NEW_CLAN.md  ORACLE_DEPLOYMENT_GUIDE.md  ORACLE_INTEGRATION_SUMMARY.md  PROMOTION_ROBLOX_UPDATE.md  QUICK_FIX.md  QUICK_START_OCI.md  RAILWAY_DEPLOYMENT.md  RANK_CUSTOMIZATION.md  RANK_IDENTIFICATION_GUIDE.md  RATE_LIMIT_FIXES.md  RATE_LIMIT_RETRY_UPDATE.md  README.md  README_DOCKER.md  RESTART_REQUIRED.md  ROBLOX_API_FIX.md  ROBLOX_PRIORITY_SYSTEM.md  ROBLOX_SYNC_GUIDE.md  ROLE_PERMISSIONS_GUIDE.md  SECURITY.md  SECURITY_FIXES_APPLIED.md  (+35 more)
.cursor/plans/: multi-clan_bot_architecture_fd3ef355.plan.md  ocir_docker_image_push_1815cd0f.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  ocir-build.yml  test.yml
commands/: admin_commands.py  user_commands.py
configs/graves_family/: ranks.json
configs/tophat/: ranks.json
deployments/graves_family/: docker-compose.yml
deployments/tophat/: docker-compose.yml
oracle/: .gitignore  oracle stacks.txt  oracle_retry.sh
plans/: multi-clan-architecture.plan.md
scripts/: ORACLE_PERMISSIONS_GUIDE.md  populate_rank_requirements.py
